# sql-cli-playground

./: .gitignore  README.md  SQL_puzzle_solutions.md  SQL_puzzles.md  SQL_puzzles_no_hints.md  project_plan.md  project_setup.sh  pyproject.toml
src/: __init__.py  cli.py  manager.py  router.py
src/TEMP_TABLES/: pets.pkl
tests/: test_router.py
